listInvoice processing